objects/LookupTest__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <description>Attachment test</description>
        <label>AttachmentId</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LookupParent2id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LookupParent2id</label>
        <referenceTo>LookupParent2__c</referenceTo>
        <relationshipLabel>LookupTests</relationshipLabel>
        <relationshipName>LookupTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LookupParent3id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LookupParent3id</label>
        <referenceTo>LookupParent3__c</referenceTo>
        <relationshipLabel>LookupTests</relationshipLabel>
        <relationshipName>LookupTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lookupTestId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LookupParent</label>
        <referenceTo>LookupParent__c</referenceTo>
        <relationshipLabel>LookupTests</relationshipLabel>
        <relationshipName>LookupTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LookupTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LookupTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LookupTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>